--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-spring.application.name=project2boot
-# MySQL properties
-spring.datasource.driver-class-name= org.postgresql.Driver
-spring.datasource.url= jdbc.postgresql://localhost:3306/katapp1
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/katapp1
 spring.datasource.username=root
 spring.datasource.password=$0101MMa
 
-
-# Hibernate properties
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.show_sql=true
-spring.mvc.hiddenmethod.filter.enabled=true
+#  Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.mvc.hiddenmethod.filter.enabled=true
